# Courcework

./: README.md
client/: CMakeLists.txt  CustomTestScreen.cpp  CustomTestScreen.h  LoginFormScreen.cpp  LoginFormScreen.h  MainMenuScreen.cpp  MainMenuScreen.h  MainScreen.cpp  MainScreen.h  MainScreen.spp  MainWindow.cpp  MainWindow.h  NetworkClient.cpp  NetworkClient.h  ProfileSettingsWidget.cpp  ProfileSettingsWidget.h  RegisterFormScreen.cpp  RegisterFormScreen.h  ResourcesScreen.cpp  ResourcesScreen.h  SHA.cpp  SHA.h  TestScreen.cpp  TestScreen.h  TestingScreen.cpp  TestingScreen.h  build_client.sh  build_clients.sh  client_config.json  client_main.cpp
server/: CMakeLists.txt  CMakeListsForServer.txt  SHA.cpp  SHA.h  bruteforceProtection.cpp  bruteforceProtection.h  build_server.sh  clientSession.cpp  clientSession.h  quizDatabase.cpp  quizDatabase.h  resourceDatabase.cpp  resourceDatabase.h  server.cpp  server.h  userDatabase.cpp  userDatabase.h
